aks/useroperationgrpc/dev/useroperation-grpc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: useroperationgrpc-deployment
  labels:
    app: useroperationgrpc
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  selector:
    matchLabels:
      service: useroperationgrpc
  template:
    metadata:
      labels:
        app: useroperationgrpc
        service: useroperationgrpc
    spec:
      containers:
        - name: useroperationgrpc
          image: otokocerpdevacr.azurecr.io/useroperationgrpc:$(Build.BuildId)
          imagePullPolicy: Always
          # securityContext:
          #   runAsUser: 1000
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            requests:
              memory: "1000Mi"
              cpu: "0.3"
            limits:
              memory: "1000Mi"
              cpu: "0.3"
