aks/useroperationgrpc/dev/useroperation-grpc-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: useroperationgrpc-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  tls:
  - hosts:
      - useroperationgrpc-dev.otokoc.com.tr
    secretName: tls-otokoc
  ingressClassName: nginx
  rules:
  - host: useroperationgrpc-dev.otokoc.com.tr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: useroperationgrpc-svc
            port:
              number: 80
